--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,7 +26,29 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: 'v1.0.${{ github.run_number }}'
-        release_name: 'Minecraft Assets Release v1.0.${{ github.run_number }}'
+        release_name: 'EnderNation-Resource-Pack v1.0.${{ github.run_number }}'
+        body: |
+          🎉 EnderNation-Resource-Pack - Offizielles Server-Resource-Pack
+            
+          Willkommen zur ersten offiziellen Version des EnderNation-Resource-Packs! 🌌 Dieses Pack wurde exklusiv für den EnderNation-Server entwickelt, um euer Spielerlebnis auf ein völlig neues Level zu heben.
+            
+           🚀 Features:
+            
+          - 🌑 Dunkle, eindringliche Texturen: Ein einzigartiger Look für alle Blöcke und Items, perfekt abgestimmt auf die geheimnisvolle Welt von EnderNation.
+          - ✨ Exklusive Items: Nur auf EnderNation! Spezielle Texturen für ausgewählte Items, die das Spielerlebnis noch einzigartiger machen.
+          - 🎨 Überarbeitete GUI: Eine benutzerdefinierte Benutzeroberfläche, die euch tiefer in die Welt von EnderNation eintauchen lässt.
+          - ⚙️ Server-Optimierung: Nahtlose Integration mit den speziellen Features und Modifikationen des EnderNation-Servers für das ultimative Gameplay.
+          
+          📥 Installation:
+          
+          1. Download: Lade das Resource-Pack [hier](https://github.com/EnderNationTeam/EnderNation-Resource-Pack/releases/new#) herunter.
+          2. Installation: Verschiebe die .zip-Datei in deinen resourcepacks-Ordner im Minecraft-Verzeichnis.
+          3. Aktivieren: Starte Minecraft, gehe zu den Ressourcenpaketen in den Optionen, und aktiviere das "EnderNation-Resource-Pack v1.0.0".
+          4. Genießen: Tritt dem EnderNation-Server bei und tauche in eine völlig neue Welt ein!
+          
+          ⚠️ Hinweis:
+          
+          Dieses Resource-Pack wurde speziell für die Nutzung auf dem EnderNation-Server entwickelt und optimiert. Es könnte auf anderen Servern nicht ordnungsgemäß funktionieren oder die gewünschten Effekte erzielen.
         draft: false
         prerelease: false
 
